# HOPSFlow-Paper

./: .envrc  .gitignore  figsaver.py  flake.nix  index.tex  latexmkrc  project.org  pyproject.toml  readme.md  utilities.py
python/otto_motor/: baseline.py  baseline_cc.py  baseline_noshift.py  bayes.py  bayesian_optimization.org  flake.nix  import_timing.py  otto_baseline.org  otto_baseline.py  otto_utilities.py  overlap_vs_no_overlap.py  pyproject.toml  shift_v_noshift_int.py  speed_coupling_analysis.py  speed_coupling_integration.py  speed_coupling_scan.py  timing_scan.py  timing_scan_integration.py
python/otto_motor/.data/: model_data.json
python/otto_motor/subprojects/: mount_taurus.sh
python/otto_motor/subprojects/bath_memory/: project.org
python/otto_motor/subprojects/bath_memory/.data.b/: model_data.json
python/otto_motor/subprojects/bath_memory/figures/: bath_memory_interaction_power.pickle  bath_memory_interaction_strength.pickle  bath_memory_power_efficiency.pickle  bath_memory_power_efficiency_contour.pickle
python/otto_motor/subprojects/bath_memory/tangle/: bath_memory.py  cycle_length.py
python/otto_motor/subprojects/cycle_length_coupling_strength/: figsaver.py  project.org
python/otto_motor/subprojects/cycle_length_coupling_strength/figures/: coupling_speed_scan_efficiency.pickle  coupling_speed_scan_efficiency_contour.pickle  (+10 more)
python/otto_motor/subprojects/cycle_shift/: cycle_shift.org  cycle_shift.org_archive  plots.ipynb  pvdiags.tar.xz  shift_cycle.py  test.org
python/otto_motor/subprojects/relaxation/: finding_relaxation_time.org
(+104 files in other folders)
